--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -11,33 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><br>\n",
-    "In this repositories, we want to classify from twitter tweets, if people has positive sentiment or negative. In general, our work process is :\n",
-    "<br><br>\n",
-    "\n",
-    "1. Importing necessary modules and packages\n",
-    "2. Data preprocessing, which itself divided by :\n",
-    "    - Data Explaratory Analysis\n",
-    "    - Removing Null values\n",
-    "    - Removing stopwords\n",
-    "    - Word lemmatization\n",
-    "    - Data Visualization (using **Target** column)\n",
-    "    - exporting data to csv\n",
-    "3. Data sampling\n",
-    "4. Data Split to train and test\n",
-    "5. count vectorizer (to change text data to numeric using weight)\n",
-    "6. Modelling\n",
-    "7. Conclusion\n",
-    "\n",
-    "<br>\n",
-    "<br>\n",
-    "Part 1-2 will be in this python files, and part 3-7 will be on the next python files. \n",
-    "<br><br>\n",
-    "\n",
-    "**Notes**\n",
-    "\n",
-    "<br>\n",
-    "We split python files because when we model our data, it takes to long and sometimes, a loop happens and we have to restart the jupyten notebook kernel. And so, we split our python file to make it easier and faster when there are error in our modelling process"
+    "In this file, we preprocess our data by removing stopwords and convert any non-base verb into base verb (for example Killed --> Kill, Walked --> Walk etc). We also do some EDA and Visualization in the end, using bar plot to see data's target (sentiment) balance and World cloud. See readme for more info of our thought process."
    ]
   },
   {
